# agent-disaster-lab

./: .env.local.example  .gitignore  PLAN.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/api/attacker/: route.ts
app/api/enforce/: route.ts
app/api/scenarios/: route.ts
app/attacker/: page.tsx
app/attacker/explore/: page.tsx
app/attacker/missions/: page.tsx
app/auth/callback/: route.ts
app/blue-team/[missionId]/: page.tsx
app/leaderboard/: page.tsx
app/sandbox/: page.tsx
cli/: README.md  scenarios.json
cli/node/: package-lock.json  package.json  tsconfig.json
cli/python/: pyproject.toml
cli/python/agent_disaster_lab/: __init__.py  __main__.py  enforce.py  visualiser.py
components/: AgentTrace.tsx  ApiKeyModal.tsx  AttackReport.tsx  AttackerMode.tsx  AuthModal.tsx  CertificateViewer.tsx  DisasterAnimation.tsx  MissionsMode.tsx  PolicySourceModal.tsx  RegulationSpotlight.tsx  SandboxChecker.tsx  ScenarioCodeSnippet.tsx  ScenarioRunner.tsx  UsernameModal.tsx
lib/: attack-patterns.ts  attacker-agents.ts  auth-context.tsx  badges.ts  blue-team-store.ts  db.ts  missions.ts  openrouter.ts  receipt-demo.ts  sse.ts  types.ts  useTypewriter.ts
lib/scenarios/: autonomous-diagnosis.ts  bvn-export.ts  discriminatory-denial.ts  hiv-disclosure.ts  index.ts  naicom-override.ts  nigeria-fintech-transfer.ts  pii-harvest.ts  sanctioned-transfer.ts  tier1-bypass.ts
lib/supabase/: server.ts
scripts/: export-scenarios.ts
supabase/: schema.sql
(+8 files in other folders)
