[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-disaster-lab"
version = "0.1.0"
description = "Terminal CLI — watch AI agents cause regulatory disasters, then watch comply54 stop them"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Oluwajuwon Omotayo", email = "ginuxtechacademy@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "comply54>=0.2.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-disaster-lab = "agent_disaster_lab.__main__:main"

[project.urls]
Homepage = "https://disaster.comply54.io"
Repository = "https://github.com/comply54/agent-disaster-lab"
